--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^12.12.58",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
+    "@types/uuid": "^8.3.0",
     "dayjs": "^1.8.35",
     "gh-pages": "^3.1.0",
     "node-sass": "^4.14.1",
